<resources>
    <string name="app_name">TaskManager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verified">verified</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="skip">skip</string>
    <string name="get_started">Get started</string>
    <string name="name" >Name</string>/>
</resources>